# EECS376

./: BetaFinalReport.odt
beta_nodes/: CMakeLists.txt  CMakeLists.txt~  beta.launch  bringup_kinect.launch  c.launch  go.launch  mainpage.dox  manifest.xml  waypoints.txt
beta_nodes/config/: costmap_params.yaml
beta_nodes/include/: Path.h~
beta_nodes/msg/: PathSegment.msg  obstacle.msg  orange.msg  pathSegment.msg  steeringMsg.msg  steeringMsg.msg~  velocityMsg.msg
beta_nodes/src/: MasterController.cpp  MasterController.cpp~  Path.cpp  estop.cpp  image_cloud_sub_steve.cpp  image_cloud_sub_steve2.cpp  masterController.cpp  obstacle.cpp  obstacle_zone.cpp  pathsegPublisher.cpp  pathsegPublisher2_temp.cpp  pathsegPublisher_temp.cpp  replan.cpp  (+5 more)
finaldemo/beta_nodes/: CMakeLists.txt  beta.launch  beta_bringup.launch  beta_orange.launch  bringup_kinect.launch  costmap.launch  frames.gv  k.launch  manifest.xml  obstacleZone.launch  orangeGoal.launch  planner.launch  x.launch
finaldemo/beta_nodes/config/: costmap_global_params.yaml  global_planner_params.yaml  move_base_params.yaml  planner_params.yaml
finaldemo/beta_nodes/include/: Path.h
finaldemo/beta_nodes/msg/: estopMsg.msg  freeSpace.msg  obstacle.msg  orangeGoal.msg  targetMsg.h  vPassBack.msg  vPassBack.msg~
finaldemo/beta_nodes/msg_gen/cpp/include/beta_nodes/: PathSegment.h  estopMsg.h  freeSpace.h  obstacle.h  orangeGoal.h  steeringMsg.h  vPassBack.h  velocityMsg.h
finaldemo/beta_nodes/msg_gen/lisp/: PathSegment.lisp  _package.lisp  _package_PathSegment.lisp  _package_estopMsg.lisp  _package_freeSpace.lisp  _package_obstacle.lisp  _package_orangeGoal.lisp  _package_steeringMsg.lisp  _package_vPassBack.lisp  _package_velocityMsg.lisp  beta_nodes-msg.asd  estopMsg.lisp  freeSpace.lisp  obstacle.lisp  orangeGoal.lisp  steeringMsg.lisp  vPassBack.lisp  velocityMsg.lisp
finaldemo/beta_nodes/src/: .obstacle_zone.cpp.swp  Path.cpp  costmap.cpp  estop.cpp  goal_publisher.cpp  goal_zone.cpp  image_cloud_sub_c.cpp  image_cloud_sub_k.cpp  image_cloud_sub_x.cpp  interface_kit.cpp  obstacle_zone.cpp  pathsegPublisher_temp.cpp  steering.cpp  velocity.cpp
finaldemo/beta_nodes/src/beta_nodes/msg/: __init__.py  _estopMsg.py  _freeSpace.py  _obstacle.py  _orangeGoal.py  _steeringMsg.py  _velocityMsg.py
laser_listener/: CMakeLists.txt
media/: demo1.3gp  demo2.3gp
orange/: .new_launch.launch.swp  CMakeLists.txt  bringup_kinect.launch  image_cloud_sub.launch  launcha.launch  mainpage.dox  manifest.xml  new_launch.launch  new_launch.launch~  simple_launch.launch
(+37 files in other folders)
